# devclub-project

./: README.md  config.py  main.py  manage.py  pyproject.toml
migrations/versions/: ae3ba3d5e856_.py
project/: __init__.py  models.py  project.db  views.py
project/static/css/: home.css
project/templates/: base.html  hello.html  home.html  names.html
